# product_api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  makefile  pyproject.toml
.github/workflows/: main.yml
src/product_api/: app.py
src/tests/: conftest.py
src/tests/integration/routes/: health.py  test_health.py  test_supplier.py
src/tests/unit/: models.py  test_models.py
