[tool.poetry]
name = "product-api"
version = "0.1.0"
description = "REST API to mannage products and inventories"
authors = ["Logan Cox <mail@logan-cox.com>"]
readme = "README.md"
packages = [{include = "product_api"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
